# tetra-demo

./: .dockerignore  .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEMO.md  DESIGN.md  Dockerfile  RESEARCH.md  TODO.md  demo.py  docker-compose.yml  main.py  new_specs.md  pyproject.toml  test_pubmed.py
agent/: __init__.py  adk_orchestrator.py  data_fetch_agent.py  graph_agent.py  orchestrator.py  tools.py
clients/: __init__.py  gilda_client.py  pubmed_client.py  string_client.py
extraction/: __init__.py  batched_litellm_miner.py  config.toml  config_loader.py  litellm_extractor.py  relationship_extractor.py  relationship_inferrer.py
frontend/: app.py
kg_agent/: __init__.py  agent.py
ml/: __init__.py  ensemble_predictor.py  hard_negative_sampling.py  link_predictor.py  pyg_link_predictor.py
models/: __init__.py  knowledge_graph.py
observability/: __init__.py  tracing.py
pipeline/: __init__.py  batched_mining.py  config.py  kg_pipeline.py  merge.py  metrics.py  models.py  orchestrator.py  parallel_extraction.py  query_agent.py  string_expansion.py
results/: pyg_training_results_20251203_130349.json  training_results_20251203_105203.json  training_results_20251203_122643.json
scripts/: batched_mining_results.json  benchmark_extractors.py  benchmark_miner_scale.py  debug_adk_agent.py  deploy-cloudrun.sh  retrain_all_models.py  retrain_all_pyg_models.py  test_batched_mining.py  test_clients.py  test_extraction.py  test_gilda_grounding.py  test_graph_agent_pyg.py  test_hybrid_pipeline.py  test_kg_pipeline.sh  test_link_prediction.py  (+8 more)
(+18 files in other folders)
